@@ -2,7 +2,7 @@
 
 ;; Created   : Tuesday, September  1 2020.
 ;; Author    : Pierre Rouleau <prouleau001@gmail.com>
-;; Time-stamp: <2021-03-08 22:35:21, updated by Pierre Rouleau>
+;; Time-stamp: <2021-03-09 09:48:53, updated by Pierre Rouleau>
 
 ;; This file is part of the PEL package.
 ;; This file is not part of GNU Emacs.
@@ -147,6 +147,7 @@
                                                              python-flymake))
 
     ([f11 32 ?x]     "pl-elixir"        pel-pkg-for-elixir      elixir)
+    (,(kbd "<f11> SPC C-a") nil         pel-pkg-for-arc         arc)
     (,(kbd "<f11> SPC C-r") nil         pel-pkg-for-racket      racket)
     (,(kbd "<f11> SPC C-s") nil         pel-pkg-for-scheme      scheme)
     ;; ([f11 ?C]
@@ -351,6 +352,7 @@ stored inside the doc/pdf directory.")
     ("makefile-automake" [f11 32 ?M])
     ("makefile-imake"  [f11 32 ?M])
     ("python"          [f11 32 ?p])
+    ("arc"             [f11 32 1])
     ("racket"          [f11 32 18])
     ("rexx"            [f11 32 ?R])
     ("netrexx"         [f11 32 ?N])
@@ -601,8 +603,8 @@ Return nil if nothing found."
         (cl-return file-path)))))
 
 (defconst pel--group-library-names
-  '(("rxt"   . "pcre2el")
-    ("Ztree" . "ztree-view")
+  '(("rxt"         . "pcre2el")
+    ("Ztree"       . "ztree-view")
     ("command-log" . "command-log-mode")
     ("netrexx"     . "netrexx-mode")
     ("racket"      . "racket-custom")
